--- a/src/Adstacy/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
@@ -5,7 +5,7 @@
 {% block stylesheets %}
   {{ parent() }}
   {% stylesheets filter='cssrewrite, uglifycss'
-    'bundles/adstacyapp/less/layout/change_password.less'
+    'bundles/adstacyapp/less/layout/form-panel.less'
   %}
     <link href="{{ asset_url }}" type="text/css" rel="stylesheet">
   {% endstylesheets %}
@@ -20,10 +20,9 @@
     </div>
   </div>
 {% endblock %}
-{% block sidebar %}{% endblock %}
 
 {% block content %}
-  <div id="change-password" class="panel panel-default column">
+  <div id="change-password" class="form-panel panel panel-default column">
     <div class="panel-heading"><h2>{{"form_password.title"|trans}}</h2></div>
     <div class="panel-body">
       {{ form_start(form, { attr: { class: '', role: 'form' } }) }}
