--- a/src/Adstacy/AppBundle/Resources/public/less/layout/contact.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/contact.less
@@ -1,37 +1,14 @@
 @import "../variables.less";
+@import "../mixins.less";
 
 #contactus-container {
-  margin: 0 auto;
-
-  .form-group,
-  .form-widget,
-  .form-text {
-    overflow: hidden;
-    zoom: 1;
-  }
-
   .form-group {
-    &:last-of-type {
-      margin-bottom: 0;
-    }
-
     > .pull-left {
-      text-align: right;
       width: 100px;
-      line-height: 34px;
-      margin: 0 15px 0 0;
     }
-  }
-
-  .form-text {
-    line-height: 34px;
   }
 
   .offset-label {
     margin-left: 115px;
-  }
-
-  textarea.form-control {
-    resize: vertical;
   }
 }
