--- a/src/Adstacy/AppBundle/Resources/public/less/layout/form-panel.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/form-panel.less
@@ -1,6 +1,7 @@
 @import "../variables.less";
+@import "../mixins.less";
 
-#change-password {
+.form-panel {
   .form-group,
   .form-widget,
   .form-text {
@@ -16,13 +17,14 @@
     > .pull-left {
       text-align: right;
       width: 150px;
-      line-height: 34px;
+      padding: 7px 0;
       margin: 0 15px 0 0;
     }
   }
 
   .form-text {
-    line-height: 34px;
+    padding: 7px 0;
+    margin: 0;
   }
 
   .offset-label {
@@ -31,5 +33,20 @@
 
   textarea.form-control {
     resize: vertical;
+  }
+
+  @media (max-width: @screen-phone) {
+    .form-group .pull-left {
+      float: none !important;
+      text-align: left;
+    }
+
+    .offset-label {
+      margin-left: 0 !important;
+    }
+
+    [type=submit] {
+      float: right;
+    }
   }
 }
