--- a/src/Adstacy/AppBundle/Resources/views/App/contact_us.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/contact_us.html.twig
@@ -5,6 +5,7 @@
 {% block stylesheets %}
   {{ parent() }}
   {% stylesheets filter='cssrewrite, uglifycss'
+    'bundles/adstacyapp/less/layout/form-panel.less'
     'bundles/adstacyapp/less/layout/contact.less'
   %}
     <link href="{{ asset_url }}" type="text/css" rel="stylesheet">
@@ -22,7 +23,7 @@
 {% endblock %}
 
 {% block content %}
-  <div id="contactus-container" class="panel panel-default column">
+  <div id="contactus-container" class="form-panel panel panel-default column">
     <div class="panel-heading">
       <h2 class="label-group"><i class="icon icon-mail"></i><span class="text">Contact Us</span></h2>
     </div>
