--- a/src/Adstacy/UserBundle/Resources/views/Resetting/request.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Resetting/request.html.twig
@@ -5,14 +5,14 @@
 {% block stylesheets %}
   {{ parent() }}
   {% stylesheets filter='cssrewrite, uglifycss'
-    'bundles/adstacyapp/less/layout/reset.less'
+    'bundles/adstacyapp/less/layout/form-panel.less'
   %}
     <link href="{{ asset_url }}" type="text/css" rel="stylesheet">
   {% endstylesheets %}
 {% endblock %}
 
 {% block content %}
-  <div id="reset-password" class="panel panel-default column">
+  <div id="reset-password" class="form-panel panel panel-default column">
     <div class="panel-heading">
       <h2>Reset Password</h2>
     </div>
@@ -22,11 +22,11 @@
         {% if invalid_username is defined %}
           <p>{{ 'resetting.request.invalid_username'|trans({'%username%': invalid_username}) }}</p>
         {% endif %}
-        <label for="username">{{ 'resetting.request.username'|trans }}</label>
+        <label for="username" class="form-text">{{ 'resetting.request.username'|trans }}</label>
         <input class="form-control" type="text" id="username" name="username" required="required">
       </div>
 
-      <div class="form-group">
+      <div class="form-group pull-right">
         <input class="btn btn-primary" type="submit" value="{{ 'resetting.request.submit'|trans }}">
       </div>
     </form>
