fix non responsive img on advert desc.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -140,6 +140,10 @@
   ul {
     margin-top: 10px;
   }
+
+  img {
+    .img-responsive(block);
+  }
 }
 .advert-text-content a, .advert-desc a {
   color: @bootstrap-blue;
