--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-container.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-container.less
@@ -15,6 +15,7 @@
   &.open {
     > #site-menu {
       width: @site-menu-width;
+      .box-shadow(~"0 1px 0 1px @{border-color}, 0 1px 5px #ddd");
     }
 
     > .adstacy-single-col {
