colorize user detail on hover.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -79,7 +79,16 @@
       &:first-child {
         margin-left: 0;
       }
+
+      &:hover {
+        color: darken(@orange-accent, 10%);
+      }
     }
+  }
+
+  .user-ads-count,
+  .user-followers-count {
+    font-weight: bold;
   }
 
   @media (min-width: @screen-phone) {
