--- a/src/Adstacy/AppBundle/Resources/public/less/variables.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/variables.less
@@ -27,7 +27,8 @@
 // Color accent
 @green-accent:                #67e300;
 @purple-accent:               #b53ad4;
-@blue-accent:                 @brand-info;
+@blue-accent:                 #2b78be;
+@orange-accent:               #f4902a;
 
 // Navbar toggle
 @navbar-default-toggle-hover-bg:           transparent;
