use max-width instead for responsiveness.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -2,7 +2,7 @@
 @import "../bootstrap/mixins.less";
 
 #create-advert {
-  width: 500px;
+  max-width: 500px;
   box-shadow: 0 0 3px #999;
   border: 1px solid #ccc;
 
