fix unexpand advert tags.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -55,7 +55,7 @@
 
 #create-advert-tags {
   border-top: 1px solid @border-color;
-  height: 31px;
+  min-height: 31px;
 }
 
 .form-content-container {
