Change base title.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,7 +11,7 @@
     <meta property="og:url" content="{{ app.request.uri }}">
     <meta property="og:title" content="{{ block('title') }}">
     <meta property="og:image" content="{% block meta_image %}{{ asset('bundles/adstacyapp/img/screenshot.png') }}{% endblock %}">
-    <title>{% block title %}Adstacy.com - Ads have never been so fun{% endblock %}</title>
+    <title>{% block title %}Ads have never been so fun | Adstacy{% endblock %}</title>
 
     {% if not app.debug %}
     <script>
