restyle find friends and who to follow list.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -51,6 +51,15 @@
   .tt-suggestion.tt-is-under-cursor {
     color: #555;
   }
+
+  .btn-group-justified {
+    .btn {
+      border-width: 1px 1px 1px 0;
+      &:first-child {
+        border-width: 1px;
+      }
+    }
+  }
 }
 
 #create-advert-tags {
