--- a/src/Adstacy/AppBundle/Resources/public/less/utilities.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/utilities.less
@@ -38,6 +38,8 @@ span.required {
 .big-center-text {
   text-align: center;
   font-size: 30px;
+  margin: 20px 0;
+  font-weight: 300;
 }
 
 .fade-hover {
@@ -50,4 +52,8 @@ span.required {
 img.center {
   display: block;
   margin: 0 auto;
+}
+
+.btn-adstacy {
+  .button-variant(#ffffff; #f62b2b; #bb0000);
 }
