--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -40,6 +40,16 @@ a {
   min-width: 300px;
   max-width: 500px;
   margin: 0 auto;
+
+  &.panel,
+  .panel {
+    border: 1px solid darken(@border-color, 10%);
+  }
+
+  .panel-heading {
+    border-color: darken(@border-color, 10%);
+    .box-shadow(0 1px 3px rgba(0,0,0,.175));
+  }
 }
 
 .adstacy-single-col {
@@ -148,15 +158,6 @@ a {
 
     > a {
       padding: 6px 12px;
-    }
-  }
-}
-
-.btn-group-justified {
-  .btn {
-    border-width: 1px 0 1px 1px;
-    &:last-child {
-      border-width: 1px;
     }
   }
 }
