restyle find friends and who to follow list and border-radius problem.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -47,6 +47,7 @@ a {
   }
 
   .panel-heading {
+    position: relative;
     border-color: darken(@border-color, 10%);
     .box-shadow(0 1px 3px rgba(0,0,0,.175));
   }
