--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -2,6 +2,12 @@
   .media {
     margin: 0;
   }
+
+  .jscroll-inner,
+  #get-started-follow & {
+    .border-bottom-radius(@border-radius-base);
+    overflow: hidden;
+  }
 }
 
 .user-card {
@@ -17,10 +23,6 @@
 
   .user-action {
     margin-left: 10px;
-  }
-
-  .jscroll-added:last-child &:last-child {
-    .border-bottom-radius(@border-radius-base);
   }
 
   &:hover {
