now search text is ellipsis.

--- a/src/Adstacy/AppBundle/Resources/public/less/overrides.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/overrides.less
@@ -45,6 +45,7 @@
     text-align: left;
   }
   .tt-suggestion a {
+    .text-overflow() !important;
     color: #333;
     display: block;
     font-size: 14px;
