--- a/src/Adstacy/AppBundle/Resources/views/Page/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Page/show.html.twig
@@ -1,5 +1,5 @@
 {% extends 'AdstacyAppBundle::layout.html.twig' %}
-
+{#
 {% block stylesheets %}
   {{ parent() }}
   {% stylesheets filter='cssrewrite, uglifycss'
@@ -8,7 +8,7 @@
     <link href="{{ asset_url }}" type="text/css" rel="stylesheet">
   {% endstylesheets %}
 {% endblock %}
-
+ #}
 {% block sidebar %}{% endblock %}
 
 {% block content %}
@@ -16,7 +16,7 @@
     <div class="panel-heading">
       <h2>{{ page.title }}</h2>
     </div>
-    <div id="page-content" class="panel-body">
+    <div class="panel-body">
       {{ page.content|raw }}
     </div>
   </div>
