--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -1,12 +1,12 @@
 {% extends 'AdstacyAppBundle::layout.html.twig' %}
 
-{% block title %}{% if ad.type == 'text' %}{{ ad.title }}{% else %}{% if ad.type == 'image' %}Image{% else %}Video{% endif %} ad by {{ ad.user.realName }}{% endif %}{%endblock %}
+{% block title %}{% if ad.type == 'text' %}{{ ad.title }}{% else %}Ad by {{ ad.user.realName }}{% endif %}{%endblock %}
 
 {% block meta_description %}{{ ad.description|striptags|slice(0, 150) }}{% endblock %}
 
 {% block meta_keywords %}{{ ad.tags|join(',') }}{% endblock %}
 
-{% block meta_image %}{% if ad.image %}{{ app.request.scheme~"://"~app.request.host~vich_uploader_asset(ad, 'image') }}{% endif %}
+{% block meta_image %}{% if ad.image %}{{ vich_uploader_asset(ad, 'image') }}{% endif %}
 {% endblock %}
 
 {% block site_body_class %}site-body-no-bg{% endblock %}
